# capslock-untoggle-macos

./: Cargo.toml  README.md  capslock-untoggle-universal  com.local.capslock-untoggle.plist  info.plist  install.sh
.cargo/: config.toml
src/: hid.rs  main.rs  tap.rs
