[package]
name = "capslock-untoggle"
version = "0.1.0"
edition = "2021"
description = "Makes Caps Lock behave as a held modifier instead of a toggle on macOS"
license = "MIT"
repository = "https://github.com/your-username/capslock-untoggle"
keywords = ["macos", "keyboard", "capslock", "hid"]
categories = ["os::macos-apis"]

[dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

[profile.release]
strip = true
opt-level = "z"   # optimize for binary size
lto = true

[package.metadata.bundle]
identifier = "com.raeproject99.capslock-untoggle"
