[package]
name = "capslock-untoggle"
version = "0.1.0"
edition = "2021"
description = "Makes Caps Lock behave as a held modifier instead of a toggle on macOS"
license = "MIT"
repository = "https://github.com/Raeproject99/CapsLock-as-a-modifier"
keywords = ["macos", "keyboard", "capslock", "hid"]
categories = ["os::macos-apis"]

[dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

[profile.release]
strip = true
opt-level = "z"
lto = true

[package.metadata.bundle]
identifier = "com.raeproject99.capslock-untoggle"
